[gd_scene load_steps=2 format=3 uid="uid://hnmb7fxbbg3f"]

[ext_resource type="Script" uid="uid://cjcynu5p1o6hc" path="res://scripts/health_bar.gd" id="1_i0wav"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_i0wav")

[node name="HealthBarBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -2.0
offset_right = 32.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="HealthBarFill" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)
